BuildHughes/translation-tool/inputs/source_meta/objects/Yash_casereassignqueuemap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>YAHSAT:case reassign and queue mapping.</description>
    <fields>
        <fullName>Case_Reassign__c</fullName>
        <label>Case Reassign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <description>Support tier of the case.</description>
        <label>Support Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queueName__c</fullName>
        <description>Name of the queue that has been assigned for tier 2/3 cases.</description>
        <label>queueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Yash_caseReassignQueueMap</label>
</CustomObject>